# CMakeUnit-example

./: .gitmodules  CMakeLists.txt  README.md
src/: foo.cmake  set.cmake
tests/: CMakeLists.txt
tests/assertions/: CMakeLists.txt  expect_eq_test.cmake  expect_false_test.cmake  expect_ge_test.cmake  expect_gt_test.cmake  expect_le_test.cmake  expect_list_contains.test.cmake  expect_list_eq.test.cmake  expect_list_length_test.cmake  expect_lt_test.cmake  expect_match_test.cmake  expect_ne_test.cmake  expect_not_streq_test.cmake  expect_streq_test.cmake  expect_true_test.cmake  expect_undefined_test.cmake
tests/examples/: CMakeLists.txt  env_setup.cmake  expect_defined.cmake  expect_not_match.cmake  expect_not_streq.cmake  expect_streq.cmake  fatal.cmake  sample_test_structure.cmake  will_fail.cmake
tests/generic/: CMakeLists.txt  fatal_test.cmake  will_fail_test.cmake  will_pass_test.cmake
tests/mocks/: CMakeLists.txt  expect_call_times.test.cmake  expect_call_with.test.cmake
tests/set/: CMakeLists.txt
tests/set/set_if_defined/: CMakeLists.txt  accept_PARENT_SCOPE.cmake  dont_set_new_variable.cmake  set_existing_variable.cmake
tests/set/set_if_undefined/: CMakeLists.txt  accept_PARENT_SCOPE.cmake  dont_override_defined_variable.cmake  set_new_variable.cmake
